# foodtruck-api

./: .dockerignore  .env.example  Caddy.Dockerfile  Caddyfile  Dockerfile  README.md  docker-compose.foodtruck.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: docker.yaml
migrations/: env.py
migrations/versions/: 717108abc1d0_add_website_role.py  8649a7b6eb8e_init_migration.py  a0c4db552383_update_user_model.py  ca713c51cd3c_add_rating_to_order_table.py
projeto_aplicado/: app.py  settings.py  utils.py
projeto_aplicado/auth/: password.py  security.py  token.py
projeto_aplicado/ext/: __init__.py
projeto_aplicado/ext/cache/: redis.py
projeto_aplicado/ext/database/: db.py
projeto_aplicado/middleware/: __init__.py  security.py
projeto_aplicado/resources/: __init__.py
projeto_aplicado/resources/base/: repository.py  schemas.py
projeto_aplicado/resources/order/: controller.py  enums.py  model.py  order_cache.py  repository.py  schemas.py  service.py
projeto_aplicado/resources/product/: controller.py  enums.py  model.py  product_cache.py  repository.py  schemas.py  service.py
projeto_aplicado/resources/public/order/: controller.py
projeto_aplicado/resources/public/products/: controller.py
projeto_aplicado/resources/setup/: controller.py
projeto_aplicado/resources/shared/: model.py  repository.py  schemas.py
projeto_aplicado/resources/user/: controller.py  model.py  repository.py  schemas.py  service.py  user_cache.py
scripts/: create_admin.py
tests/: conftest.py  test_api_order.py  test_api_products.py  test_api_users.py
tests/test_auth/: test_token_api.py  test_token_unit.py
